Closed
Bug 224759
Opened 22 years ago
Closed 22 years ago
Tree displays text "null" for values pulled from database that are null
Categories
(Core Graveyard :: SQL, defect, P3)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8alpha1
People
(Reporter: murray.bryant, Assigned: janv)
Details
Attachments
(1 file)
|
4.97 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5) Gecko/20031007
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5) Gecko/20031007
When viewing a tree that is connected to a datasource using mozdb, any values
that are null in the database are being written into the label of the tree cell
as the text "null"
Reproducible: Always
Steps to Reproduce:
1.Link Tree to datasource using mozdb
2. ensure that some of the values in database contain null's
3. view tree, will show the text null
Actual Results:
Draws the label with the text null
Expected Results:
Display a blank label in the tree
| Assignee | ||
Comment 1•22 years ago
|
||
yeah, as we discussed I'll add a flag to the mozISqlResult interface -
displayNullValues that defaults to false
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Updated•22 years ago
|
Priority: -- → P3
Target Milestone: --- → mozilla1.8alpha
| Assignee | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Comment 3•22 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 4•22 years ago
|
||
btw, the attribute is called displayNullAsText
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•