Fix for bug 224759. Tree displays text "null" for values pulled from database that are null. r=me